--- a/src/app/protein/protein.component.html
+++ b/src/app/protein/protein.component.html
@@ -1,1 +1,34 @@
-<p>protein works!</p>
+<div class="caloriesStyle">
+  <mat-card>
+    <mat-card-content>
+    <h2 class="h2">Insira as Proteínas</h2>
+
+    <section class="section">
+      <mat-form-field class="margin">
+        <mat-label>Valor em gramas</mat-label>
+        <input matInput type="number" [(ngModel)]="value">
+      </mat-form-field>
+    </section>
+    
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="result-card">
+  <mat-card-content>
+    <h2>Meta Diária (140gr)</h2>
+
+    <mat-slider
+        class="margin"
+        [disabled]="disabled"
+        [invert]="invert"
+        [max]="1500"
+        [min]="0"
+        [step]="1"
+        [thumbLabel]="true"
+        [tickInterval]="getSliderTickInterval()"
+        [(ngModel)]="value"
+        [vertical]="vertical">
+    </mat-slider>
+  </mat-card-content>
+</mat-card>
+</div>
